--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,12 +1,39 @@
 body {
-	background-color: #FFFEFC;
+	background-color: #FFFDFB;
 }
+
+svg#videoSVG {
+	position:absolute;
+	bottom:0;
+	width: 6000px;
+	height: 50%;
+}
+
+.xAxis path,
+.xAxis line {
+    fill: none;
+    stroke: black;
+    shape-rendering: crispEdges;
+}
+
+.xAxis text {
+    font-family: sans-serif;
+    font-size: 11px;
+    color: black;
+}
+
 
 svg#graphSVG {
 	width: 100%;
 	height: 100%;
 	margin:auto;
-	position: absolute;
+	position: fixed;
+}
+
+.youtuber {
+	position:fixed;
+	margin: 50px;
+	bottom: 35%;
 }
 
 .hidden {
@@ -16,3 +43,4 @@ svg#graphSVG {
 .active {
 	z-index: 1000;
 }
+
