scrolling highlights and unhighlights videos and graph correctly.  clicking on a video twice will unhighlight everything

--- a/scripts/templates/Video.Template.html
+++ b/scripts/templates/Video.Template.html
@@ -1,5 +1,6 @@
 <img src='<%= video.images[0] %>' width='100'></img>
 <div><%= app.timeFormat(video.publishedDate) %></div>
 <div><%= video.title %></div>
+<div><%= video.views %></div>
 <div><%= video.youtuber %></div>
 <div><%= video.associations.join(', ') %></div>
