delete code that's commented out, and format the video info a bit

--- a/scripts/templates/Video.Template.html
+++ b/scripts/templates/Video.Template.html
@@ -1,6 +1,6 @@
-<img src='<%= video.images[0] %>' width='100'></img>
-<div><%= app.timeFormat(video.publishedDate) %></div>
-<div><%= video.title %></div>
-<div><%= video.views %></div>
-<div><%= video.youtuber %></div>
-<div><%= video.associations.join(', ') %></div>
+<img class='videoDesc videoImage' src='<%= video.images[0] %>'></img>
+<div class='videoDesc videoDate'><%= app.timeFormat(video.publishedDate) %></div>
+<div class='videoDesc videoTitle'><%= video.title %></div>
+<div class='videoDesc videoViews'><%= video.views %> views</div>
+<div class='videoDesc videoAuthor'><%= video.youtuber %></div>
+<div class='videoDesc videoAssociations'><%= video.associations.join(', ') %></div>
