--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -13,73 +13,7 @@ svg {
 	/*height: 50%;*/
 }
 
-.xAxis path,
-.xAxis line {
-    fill: none;
-    stroke: #999;
-    shape-rendering: crispEdges;
+path.distancePath {
+	fill: none;
+	stroke: none;
 }
-
-.xAxis text, .markerDate, .video text {
-    font-size: 24px;
-    color: #666;
-}
-
-.youtuber {
-	position:fixed;
-	margin: 50px;
-	bottom: 35%;
-}
-
-.fade {
-	opacity: .05;
-}
-
-.solid {
-	opacity: 1;
-}
-
-/*******************
-* HTML
-*/
-
-.timelineBG {
-	height: 100%;
-	position: fixed;
-}
-
-.settings {
-	position: fixed;
-	bottom: 0;
-	right: 0;
-	margin: 20px;
-}
-
-.description {
-	position: fixed;
-	width: 500px;
-	bottom: 0;
-	left: 0;
-	margin: 20px;
-	background-color: rgba(255, 253, 251, 1);
-	border: 1px solid #fff;
-	border-radius: 5px;
-
-	box-shadow: 0 0 5px #999;
-}
-
-.videoTitle {
-	font-weight: 700;
-}
-
-/*******************
-* General
-*/
-.hidden {
-	display: none;
-}
-
-.active {
-	z-index: 1000;
-}
-
